--- a/src/components/WorkGrid/WorkGrid.module.css
+++ b/src/components/WorkGrid/WorkGrid.module.css
@@ -31,6 +31,7 @@
 @media (max-width: 768px) {
   .rowTop,
   .rowBottom {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
   }
 }
